コードの細かい修正